src/snapshot_middleware/snapshots/librojo__snapshot_middleware__dir__test__folder_in_folder.snap
---
source: src/snapshot_middleware/dir.rs
expression: instance_snapshot
---
snapshot_id: ~
metadata:
  ignore_unknown_instances: false
  instigating_source:
    Path: /foo
  relevant_paths:
    - /foo
    - /foo/init.meta.json
    - /foo/init.lua
    - /foo/init.luau
    - /foo/init.server.lua
    - /foo/init.server.luau
    - /foo/init.client.lua
    - /foo/init.client.luau
    - /foo/init.csv
  context: {}
  debug_id: ~
name: foo
class_name: Folder
properties: {}
children:
  - snapshot_id: ~
    metadata:
      ignore_unknown_instances: false
      instigating_source:
        Path: /foo/Child
      relevant_paths:
        - /foo/Child
        - /foo/Child/init.meta.json
        - /foo/Child/init.lua
        - /foo/Child/init.luau
        - /foo/Child/init.server.lua
        - /foo/Child/init.server.luau
        - /foo/Child/init.client.lua
        - /foo/Child/init.client.luau
        - /foo/Child/init.csv
      context: {}
      debug_id: ~
    name: Child
    class_name: Folder
    properties: {}
    children: []
    ignore_children: false
ignore_children: false

